2006-09-12  Nathaniel Smith  <njs@pobox.com>

	* tests/ws_ops_with_wrong_node_type: Add two failing test cases,
	from bug report from Albert Ramstedt.

2006-09-12  Nathaniel Smith  <njs@pobox.com>

	* work.cc (perform_additions, perform_deletions) 
	(perform_rename, perform_pivot_root): 
	* revision.cc (make_revision_for_workspace): Add some MMs.

2006-09-11  Nathaniel Smith  <njs@pobox.com>

	* tests/commit_validation_lua_hook/errmsg: Update for new phrasing
	of error message.

2006-09-11  Nathaniel Smith  <njs@pobox.com>

	* cert.{cc,hh} (cert_revision_changelog): Take utf8 instead of string.

	* work.cc (read_user_log, write_user_log):
	* lua_hooks.{hh,cc} (hook_validate_commit_message):
	(hook_edit_comment):
	* cmd_ws_commit.cc (get_log_message_interactively): 
	* commands.cc (process_commit_message_args): Type properly, and do
	charset conversion when necessary.

	* cmd_merging.cc (merge_into_dir): 
	* cmd_ws_commit.cc (commit): Generate utf8 changelogs.

	* tests/i18n_commit_messages/: New test.
	
2006-09-12  Thomas Moschny  <thomas.moschny@gmx.de>

	* Makefile.am (package_revision.txt): Follow-up for the merge of
	the workspace-merge.migration branch: Use 'mtn automate
	get_base_revision' to get the base revision instead of copying the
	contents of _MTN/revision.

2006-09-11  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 2 fuzzies.

2006-09-09  Benoît Dejean  <benoit@placenet.org>

	* fr.po: Updated French translation.

2006-09-09  Nathaniel Smith  <njs@pobox.com>

	* cmd_merging.cc (pluck): Error out if there is no work to be
	done, or if the merge resulting in no changes to be applied.
	* tests/pluck_restricted/__driver__.lua: Test for this.

2006-09-08  Grahame Bowland  <grahame@angrygoats.net>

	* basic_io.hh (basic_io::printer):
	note that only one printer can be referenced at a time, 
	due to shared static buffer.
	* basic_io.cc (basic_io::printer::printer, 
	basic_io::printer::~printer): add reference tracking, 